# btc-cycles

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  bitcoin.ipynb  bitcoin_old.ipynb  coverage.lcov  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml  python-publish.yml  run.yml
btc_cycles/: __init__.py  bitcoin.py  halving.py  halvings.json  halvings.py  prices.py  scraper.py
btc_cycles/artist/: __init__.py  artist.py  interactive.py  radial_mapping.py  static.py  utils.py
btc_cycles/artists/: __init__.py  artist.py  static_artist.py  utils.py
btc_cycles/coins/: coins.py
btc_cycles/coins/bitcoin/: bitcoin.py
btc_cycles/core/: __init__.py  base.py  bitcoin.py  coin.py  halvings.py  prices.py  utils.py
btc_cycles/core/sources/: __init__.py  base.py  cmc.py  cryptocompare.py  source.py
notebooks/: bitcoin.ipynb
temp/: cmc.ipynb
tests/: conftest.py  test_halvings.py  test_prices.csv
tests/artist/: conftest.py  test_artist.py  test_interactive.py  test_overlay.py  test_radial_mapping.py  test_utils.py
tests/core/: test_bitcoin.py  test_cmc.py  test_coin.py  test_halvings.py  test_prices.py
tests/core/halvings/: test_get_halving_data.py  test_halvings.py  test_update_predicted_halv.py
tests/core/sources/: test_cmc.py  test_cryptocompare.py
