[tool.poetry]
name = "btc-cycles"
version = "0.3.2"
description = "Track Bitcoin price over halving cycles"
authors = ["giocaizzi <giocaizzi@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["btc_cycles/core/halvings.json"]

[tool.poetry.dependencies]
python = "^3.8.1"
matplotlib = [
    { version = "^3.8", python = "^3.9" },
    { version = "<3.8", python = "<3.9" },
]
pandas = [
    { version = "^2.1", python = "^3.9" },
    { version = "<2.1", python = "<3.9" },
]
cryptocompare = "^0.7.6"
cryptocmd = "^0.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = { version = "^24.4.2", extras = ["jupyter"] }
flake8 = "^7.0.0"
flake8-rst-docstrings = "^0.3.0"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
pytest-mock = "^3.14"

# Avoid PyPI/Poetry problem: https://github.com/python-poetry/poetry/issues/9293
docutils = "!=0.21.post1"

[tool.coverage.report]
include = ["btc_cycles/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
