[tool.poetry]
name = "btc-cycles"
version = "0.3.4"
description = "Track Bitcoin price over halving cycles"
authors = ["giocaizzi <giocaizzi@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["btc_cycles/core/halvings.json"]

[tool.poetry.dependencies]
python = "^3.8.1"
matplotlib = [
    { version = "^3.8", python = "^3.9" },
    { version = "<3.8", python = "<3.9" },
]
pandas = [
    { version = "^2.1", python = "^3.9" },
    { version = "<2.1", python = "<3.9" },
]
cryptocompare = "^0.7.6"
cryptocmd = "^0.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
pytest-mock = "^3.14"
pre-commit = { version = "^3.7.1", python = ">=3.9,<4.0.0" }
nbconvert = "^7.16.4"
jupyter = "^1.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report xml --cov-report html --cov-report lcov"

[tool.coverage.report]
include = ["btc_cycles/*"]

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = [
    # black compatibility
    # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#minimal-configuration
    "E203",
    "E701",
    # RST201, RST203, RST301 - Google Python Style docstrings cause errors (ref:??)
    "RST201",
    "RST203",
    "RST301",
]
exclude = [
    "tests/*",
    ".github/*",
    ".vscode/*",
    "docs/*",
    "docsrc/*",
    "temp/*",
    " ./build/*",
]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
