[project]
name = "btc-cycles"
version = "0.4.0"
description = "Track Bitcoin price over halving cycles"
authors = [{ name = "giocaizzi", email = "giocaizzi@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.1",
    "cryptocompare>=0.7.6",
    "cryptocmd>=0.6.4",
    "requests>=2.28",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ipykernel>=6.29",
    "python-dotenv>=1.0",
    "pre-commit>=3.7",
    "nbconvert>=7.16",
    "jupyter>=1.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report xml --cov-report html --cov-report lcov"

[tool.coverage.report]
include = ["btc_cycles/*"]

[tool.ruff]
line-length = 88
exclude = [
    "tests/*",
    ".github/*",
    ".vscode/*",
    "docs/*",
    "docsrc/*",
    "temp/*",
    "build/*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["btc_cycles"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
